fixed bug in evolution not showing all Gen 1 evolutions

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,4 +1,23 @@
 .landing {
+    padding: 10px;
+}
+
+.landing h1 {
+    margin-left: 6%;
+}
+
+.search-input {
+    height: 35px;
+    width: 90%;
+    box-sizing: border-box;
+    border-radius: 20px;
+    margin: 10px 0px;
+    padding: 0px 10px;
+    font-size: 16px;
+    outline: none;
+}
+
+.poke-flex {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
